--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,7 +3,27 @@
   <head>
     <meta charset="utf-8">
     <title>Reddit.js</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootswatch@5.3.2/dist/quartz/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootswatch@5.3.2/dist/morph/bootstrap.min.css" rel="stylesheet">
+    <style>
+        body {
+            max-width: 1000px;
+            margin: 0 auto;
+        }
+        .navbar {
+            background-color: #333;
+        }
+        .navbar-nav {
+            display: flex;
+            justify-content: space-between;
+        }
+        .container {
+            text-align: left;
+        }
+        .vote-buttons {
+            display: flex;
+            justify-content: space-between;
+        }
+    </style>
   </head>
   <body>
     <nav class="navbar">
